Fix issue #3 list overflow

--- a/src/assets/less/component/list.less
+++ b/src/assets/less/component/list.less
@@ -14,6 +14,7 @@
             background-color: @item-color;
             margin: .2rem;
             padding: .8rem;
+            word-wrap: break-word;
         }
     }
 
